deployments/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart-api
  namespace: test
spec:
  selector:
    app: cart-api
  ports:
    - port: 0
      targetPort: 0
  type: ClusterIP
