deployments/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cart-api-ingress
  namespace: test
spec:
  ingressClassName: nginx
  rules:
    - host: cart-api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cart-api
                port:
                  number: 0
